#fix bug double scroll when select Wallet

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,10 +5,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #020412;
   color: #FFF;
-
-  > div {
-    height: 100%;
-  }
 }
 
 code {
